--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 </head>
 <body>
     <h1>Interactive Phonetic Chart</h1>
-    <button id="start-button">Start</button> <!-- Ensure the start button is here with the correct id -->
+    <button id="start-button">Start</button>
     <div id="vowel-sounds"></div>
     <div id="consonant-sounds"></div>
     <div id="follow-along">
