--- a/index.html
+++ b/index.html
@@ -2,233 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interactive Phonetic Chart</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            background-image: url('images/background.png'); /* Updated background image */
-            background-size: cover; /* Ensures the image covers the entire background */
-            background-position: center; /* Centers the image */
-            background-color: #333; /* Fallback background color */
-        }
-        .chart-button {
-            display: inline-block;
-            margin: 5px;
-            padding: 15px; /* Increased padding for bigger buttons */
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-        .chart-button:hover {
-            background-color: #f0f0f0;
-        }
-        .highlighted {
-            background-color: yellow;
-        }
-        #vowel-sounds, #consonant-sounds, #follow-along {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            margin: 20px 0;
-        }
-        #controls {
-            margin: 20px 0;
-        }
-        .play-button {
-            font-size: 20px;
-            padding: 10px;
-            cursor: pointer;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            margin-left: 10px;
-        }
-        .play-button:hover {
-            background-color: #45a049;
-        }
-        .tooltip {
-            position: absolute;
-            background-color: yellow;
-            border: 1px solid black;
-            padding: 5px;
-            z-index: 1000;
-        }
-    </style>
+    <title>Phonetic Chart</title>
+    <script src="path/to/your/script.js"></script>
 </head>
 <body>
-    <h1>Interactive Phonetic Chart</h1>
-    <button id="start-button">Start</button> <!-- Ensure the start button is here with the correct id -->
-    <div id="vowel-sounds"></div>
-    <div id="consonant-sounds"></div>
-    <div id="follow-along">
-        <h2>Follow Along Chart</h2>
-        <button class="play-button" onclick="playSelectedSounds()">Play Selected Sounds</button>
-    </div>
-    <div id="controls">
-        <button onclick="clearFollowAlong()">Clear Follow Along Chart</button>
-        <button onclick="clearHighlights()">Clear Highlights</button>
-    </div>
-
-    <script>
-        const phoneticSounds = {
-            vowels: {
-                "a": "sounds/sound_a.mp3",
-                "e": "sounds/sound_e.mp3",
-                "i": "sounds/sound_i.mp3",
-                "o": "sounds/sound_o.mp3",
-                "u": "sounds/sound_u.mp3"
-            },
-            consonants: {
-                "b": "sounds/sound_b.mp3",
-                "d": "sounds/sound_d.mp3",
-                "f": "sounds/sound_f.mp3",
-                "g": "sounds/sound_g.mp3",
-                "h": "sounds/sound_h.mp3"
-            }
-        };
-
-        let isPlaying = false; // Variable to track if sounds are being played
-
-        // Function to play a sound
-        function playSound(filePath) {
-            console.log(`DEBUG: Attempting to play sound from: ${filePath}`);
-            const audio = new Audio(filePath);
-            return audio.play().then(() => {
-                console.log(`DEBUG: Successfully playing sound from: ${filePath}`);
-            }).catch((error) => {
-                console.error(`ERROR: Failed to play sound ${filePath}: ${error}`);
-                alert(`Failed to play sound from ${filePath}. Please check if the file exists.`);
-            });
-        }
-
-        // Function to prompt user for their name and welcome them
-        function getUserName() {
-            const name = prompt("Please enter your name:");
-            console.log(`DEBUG: User entered name: ${name}`);
-            if (name) welcomeUser(name);
-        }
-
-        // Function to display a welcome message, play it using speech synthesis, and hide the start button
-        function welcomeUser(name) {
-    const welcomeLabel = document.createElement('h2');
-    welcomeLabel.textContent = `Welcome, ${name}! Enjoy your interactive phonetic chart.`;
-    document.body.prepend(welcomeLabel);
-    console.log(`DEBUG: Welcome message displayed for: ${name}`);
-
-    const welcomeMessage = `Welcome, ${name}! Enjoy your interactive phonetic chart.`;
-    const utterance = new SpeechSynthesisUtterance(welcomeMessage);
-    utterance.pitch = 1.2; // Adjust pitch for a more natural sound
-    utterance.rate = 1; // Normal speaking rate
-
-    function speakMessage() {
-        const voices = window.speechSynthesis.getVoices();
-        console.log('DEBUG: Voices loaded:', voices);
-        // Try to find an English voice
-        const preferredVoice = voices.find(voice => voice.lang.includes('en')) || voices[0];
-        if (preferredVoice) {
-            utterance.voice = preferredVoice;
-            console.log(`DEBUG: Selected voice: ${preferredVoice.name}`);
-        } else {
-            console.error('ERROR: No suitable voice found.');
-        }
-        window.speechSynthesis.speak(utterance);
-    }
-
-    if (window.speechSynthesis.onvoiceschanged !== undefined) {
-        window.speechSynthesis.onvoiceschanged = speakMessage;
-    } else {
-        speakMessage();
-    }
-
-    // Hide the start button after displaying the welcome message
-    const startButton = document.getElementById('start-button');
-    if (startButton) {
-        startButton.style.display = 'none';
-        console.log('DEBUG: Start button hidden');
-    } else {
-        console.error('ERROR: Start button not found.');
-    }
-}
-        // Function to create a button for each phonetic sound
-        function createButton(symbol, soundFile, container) {
-            const button = document.createElement('div');
-            button.className = 'chart-button';
-            button.textContent = `/${symbol}/`;
-            button.onclick = () => handleButtonClick(button, soundFile);
-            console.log(`DEBUG: Button created for symbol: /${symbol}/ with sound file: ${soundFile}`);
-            container.appendChild(button);
-        }
-
-        // Function to handle button click events
-        function handleButtonClick(button, soundFile) {
-            playSound(soundFile);
-            button.classList.add('highlighted');
-            console.log(`DEBUG: Button clicked, symbol: /${button.textContent}/, playing sound: ${soundFile}`);
-            const clone = button.cloneNode(true);
-            clone.dataset.soundFile = soundFile;
-            clone.classList.remove('highlighted');
-            document.getElementById('follow-along').appendChild(clone);
-        }
-
-        // Function to clear the Follow Along Chart
-        function clearFollowAlong() {
-            document.getElementById('follow-along').innerHTML = '<h2>Follow Along Chart</h2><button class="play-button" onclick="playSelectedSounds()">Play Selected Sounds</button>';
-            console.log('DEBUG: Follow Along Chart cleared');
-        }
-
-        // Function to clear highlighted buttons
-        function clearHighlights() {
-            const highlightedButtons = document.querySelectorAll('.chart-button.highlighted');
-            highlightedButtons.forEach(button => button.classList.remove('highlighted'));
-            console.log('DEBUG: Highlights cleared');
-        }
-
-        // Function to play selected sounds in the Follow Along Chart with a delay
-        async function playSelectedSounds() {
-            if (isPlaying) return;
-            console.log('DEBUG: Playing selected sounds');
-
-            const followAlongDiv = document.getElementById('follow-along');
-            const buttons = followAlongDiv.querySelectorAll('div.chart-button');
-            isPlaying = true;
-
-            for (const button of buttons) {
-                const soundFile = button.dataset.soundFile;
-                await playSound(soundFile);
-                console.log(`DEBUG: Playing sound file: ${soundFile}`);
-                await new Promise(resolve => setTimeout(resolve, 500)); // Add delay between sounds
-            }
-
-            isPlaying = false;
-            console.log('DEBUG: Finished playing selected sounds');
-        }
-
-        // Initialization function
-        function init() {
-            console.log('DEBUG: Initialization started');
-            const startButton = document.getElementById('start-button');
-            if (startButton) {
-                startButton.addEventListener('click', () => {
-                    getUserName();
-                    const vowelSoundsDiv = document.getElementById('vowel-sounds');
-                    for (const [symbol, soundFile] of Object.entries(phoneticSounds.vowels)) {
-                        createButton(symbol, soundFile, vowelSoundsDiv);
-                    }
-                    const consonantSoundsDiv = document.getElementById('consonant-sounds');
-                    for (const [symbol, soundFile] of Object.entries(phoneticSounds.consonants)) {
-                        createButton(symbol, soundFile, consonantSoundsDiv);
-                    }
-                    console.log('DEBUG: Buttons created for vowels and consonants');
-                });
-            } else {
-                console.error('ERROR: Start button not found.');
-            }
-        }
-
-        window.onload = init;
-    </script>
+    <button onclick="playSound('a')">Play A</button>
+    <button onclick="playSound('e')">Play E</button>
+    <button onclick="playSound('i')">Play I</button>
+    <button onclick="playSound('o')">Play O</button>
+    <button onclick="playSound('u')">Play U</button>
+    <button onclick="playSound('au')">Play AU</button>  <!-- Button for new 'au' sound -->
 </body>
 </html>
