--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 "o": "sounds/sound_o.mp3",
                 "u": "sounds/sound_u.mp3",
                 "au": "sounds/sound_au.mp3"  // Adding the new 'au' sound
-            },
+            },phoneticSounds.vowels["ai"] = "sounds/sound_ai.mp3";  // New vowel sound
             consonants: {
                 "b": "sounds/sound_b.mp3",
                 "d": "sounds/sound_d.mp3",
@@ -232,4 +232,5 @@
 
         window.onload = init;
     </script>
-</[_{{{CITATION{{{_1{](https://github.com/EleanorEllingson/web-dev/tree/b2f2a382e77a20fd6895677c8b8f402ac4bae352/7-bank-project%2F1-template-route%2Ftranslations%2FREADME.ko.md)
+</body>
+</html>
