--- a/index.html
+++ b/index.html
@@ -57,22 +57,8 @@
             z-index: 1000;
         }
     </style>
-</head>
-<body>
-    <h1>Interactive Phonetic Chart</h1>
-    <button id="start-button">Start</button> <!-- Ensure the start button is here with the correct id -->
-    <div id="vowel-sounds"></div>
-    <div id="consonant-sounds"></div>
-    <div id="follow-along">
-        <h2>Follow Along Chart</h2>
-        <button class="play-button" onclick="playSelectedSounds()">Play Selected Sounds</button>
-    </div>
-    <div id="controls">
-        <button onclick="clearFollowAlong()">Clear Follow Along Chart</button>
-        <button onclick="clearHighlights()">Clear Highlights</button>
-    </div>
-
     <script>
+        // Object holding paths to phonetic sound files
         const phoneticSounds = {
             vowels: {
                 "a": "sounds/sound_a.mp3",
@@ -80,8 +66,10 @@
                 "i": "sounds/sound_i.mp3",
                 "o": "sounds/sound_o.mp3",
                 "u": "sounds/sound_u.mp3",
-                "ai": "sounds/sound_ai.mp3",  // Correct new vowel sound 'ai'
-                "au": "sounds/sound_au.mp3"  // Correct 'au' sound
+                "ai": "sounds/sound_ai.mp3",
+                "au": "sounds/sound_au.mp3",
+                "ae": "sounds/sound_ae.mp3",
+                "ə" : "sounds/sound_ə.mp3"
             },
             consonants: {
                 "b": "sounds/sound_b.mp3",
@@ -230,5 +218,19 @@
             }
         };
     </script>
+</head>
+<body>
+    <h1>Interactive Phonetic Chart</h1>
+    <button id="start-button">Start</button> <!-- Ensure the start button is here with the correct id -->
+    <div id="vowel-sounds"></div>
+    <div id="consonant-sounds"></div>
+    <div id="follow-along">
+        <h2>Follow Along Chart</h2>
+        <button class="play-button" onclick="playSelectedSounds()">Play Selected Sounds</button>
+    </div>
+    <div id="controls">
+        <button onclick="clearFollowAlong()">Clear Follow Along Chart</button>
+        <button onclick="clearHighlights()">Clear Highlights</button>
+    </div>
 </body>
 </html>
