--- a/index.html
+++ b/index.html
@@ -232,4 +232,4 @@
 </head>
 <body>
     <h1>Interactive Phonetic Chart</h1>
-    <button id="start-button
+    <button id="start-button">Start[_{{{CITATION{{{_1{](https://github.com/Babii-Oleksandr/Babii-Oleksandr_GH8_CMS/tree/ddbc66b94acc5a3d11d5a0cd341998f4768af4d8/home14%2Findex.php)
