--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interactive Phonetic Chart</title>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Interactive Phonetic Chart</title>
+        <link rel="stylesheet" href="styles.css">
+    </head>    
     <style>
         .chart-container {
             display: flex;
