--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 "au": "sounds/sound_au.mp3",
                 "ae": "sounds/sound_ae.mp3",
                 "ə": "sounds/sound_ə.mp3",
-                "I": "sounds/sound_I.mp3",
+                "I": "sounds/sound_ɪ.mp3",
                 "ɔ": "sounds/sound_ɔ.mp3",
             },
             consonants: {
