--- a/index.html
+++ b/index.html
@@ -4,12 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interactive Phonetic Chart</title>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Interactive Phonetic Chart</title>
-        <link rel="stylesheet" href="styles.css">
-    </head>    
+    <link rel="stylesheet" href="styles.css">
     <style>
         .chart-container {
             display: flex;
@@ -49,6 +44,7 @@
     <div id="follow-along">
         <h2>Follow Along Chart</h2>
         <button class="play-button small-button" onclick="playSelectedSounds()">Play Selected Sounds</button>
+        <button class="small-button" onclick="clearFollowAlong()">Clear Selected Sounds</button>
     </div>
     <button onclick="clearFollowAlong()" class="small-button">Clear Follow Along Chart</button>
     <script>
