--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <button class="play-button small-button" onclick="playSelectedSounds()">Play Selected Sounds</button>
         <button class="small-button" onclick="clearFollowAlong()">Clear Selected Sounds</button>
     </div>
+    <button id="clear-chart-button">Clear Chart</button> <!-- Added Clear Chart button -->
     <button onclick="clearFollowAlong()" class="small-button">Clear Follow Along Chart</button>
     <script>
         const phoneticSounds = {
@@ -137,6 +138,12 @@
             }
         }
 
+        // Clear Highlighted Buttons
+        function clearHighlightedButtons() {
+            const buttons = document.querySelectorAll('.chart-button');
+            buttons.forEach(btn => btn.classList.remove('highlighted'));
+        }
+
         // Play selected sounds with a delay
         async function playSelectedSounds() {
             if (isPlaying) return;
@@ -179,6 +186,14 @@
                         console.error("ERROR: Consonant sounds container not found.");
                     }
                 });
+
+                // Adding event listener for Clear Chart button
+                const clearChartButton = document.getElementById('clear-chart-button');
+                if (clearChartButton) {
+                    clearChartButton.addEventListener('click', clearHighlightedButtons);
+                } else {
+                    console.error('ERROR: Clear Chart button not found.');
+                }
             } else {
                 console.error('ERROR: Start button not found.');
             }
