verified clear chart button id

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <button class="play-button small-button" onclick="playSelectedSounds()">Play Selected Sounds</button>
         <button class="small-button" onclick="clearFollowAlong()">Clear Selected Sounds</button>
     </div>
-    <button id="clear-chart-button">Clear Chart</button> <!-- Added Clear Chart button -->
+    <button id="clear-chart-button">Clear Chart</button>
     <button onclick="clearFollowAlong()" class="small-button">Clear Follow Along Chart</button>
     <script>
         const phoneticSounds = {
